WebCore:

Fixed and reviewed by Darin, Adele, and Oliver.

        WebCore part of fix for <rdar://problem/5107538> REGRESSION: Page scroll when selecting characters from inline input candidate window by arrow buttons
        http://bugs.webkit.org/show_bug.cgi?id=13263

        * dom/KeyboardEvent.h: (WebCore::KeypressCommand::isEmpty): Added helper method.

WebKit:

        Fixed and reviewed by Darin, Adele, and Oliver.

        WebKit part of fix for <rdar://problem/5107538> REGRESSION: Page scroll when selecting characters from inline input candidate window by arrow buttons
        http://bugs.webkit.org/show_bug.cgi?id=13263

        * WebView/WebHTMLView.mm:
        (-[WebHTMLView _interceptEditingKeyEvent:shouldSaveCommand:]):  If we have no command after calling interpretKeyEvents, we assume the input method handled the key.
        (-[WebHTMLView doCommandBySelector:]): Add noop: to the command vector, but then when actually performing actions, ignore it.



Canonical link: https://commits.webkit.org/17575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21052 268f45cc-cd09-0410-ab3c-d52691b4dbfc